--- a/ASPNETStreaming/MainLayout.razor
+++ b/ASPNETStreaming/MainLayout.razor
@@ -2,6 +2,10 @@
 @implements IRazorComponentApplication<MainLayout>
 <!DOCTYPE html>
 <html>
+<head>
+	<meta charset="utf-8" />
+	<title>ASPNETStreaming</title>
+</head>
 <body>
 	<h3>MainLayout</h3>
 	@Body
